--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 			background-image: url('p photo/m p1.jpg');
 			background-size: cover;
 			border-radius: 15px;
-			box-shadow: 1px 7px 10px gold;
+			box-shadow: 1px 7px 10px skyblue;
 		}
 
 		.linkdiv {
 			height: 140px;
 			width: 100%;
-			background-color: #0009;
+			background: linear-gradient(,#000);
 			border-top-left-radius: 15px;
 			border-top-right-radius: 15px;
-			box-shadow: 0px 10px 15px gold;
+			box-shadow: 0px 10px 15px skyblue;
 		}
 
 		.link {
@@ -79,7 +79,7 @@
 			float: right;
 			margin-top:360px;
 			padding-right:30px;
-			color: gold;
+			color: skyblue;
 			font-size: 44px;
 		}
 
@@ -91,7 +91,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 1.jpg');
 
 		}
@@ -104,7 +104,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 2.jpg');
 
 		}
@@ -117,7 +117,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 3.jpg')
 		}
 
@@ -125,26 +125,26 @@
 			height:100%;
 			width: 100%;
 			border-radius: 15px;
-			background-color: #717171;
-			box-shadow: 0px 0px 15px gold;
+				background:linear-gradient(#717171,#000);
+			box-shadow: 0px 0px 15px skyblue;
 		}
 
 		.headhr {
 			width: 60%;
 			height: 3px;
-			border-color: gold;
+			border-color: skyblue;
 			border-radius: 190px;
 		}
 
 		.brhr {
 			width: 90%;
-			border-color: gold;
+			border-color: skyblue;
 		}
 
 		.smallhr {
 			width: 40%;
 			height: 3px;
-			border-color: gold;
+			border-color: skyblue;
 			border-radius: 190px;
 
 
@@ -154,19 +154,20 @@
 			height:100%;
 			width: 100%;
 			border-radius: 15px;
-			background-color: #717171;
-			box-shadow: 0px 0px 15px gold;
+			background:linear-gradient(#717171,#000);
+			box-shadow: 0px 0px 15px skyblue;
 			margin-top: -18px
 		}
 
 		}
 		.thanks{
 			height: 140px; 
-			background-color: grey; 
+			background:linear-gradient(#Fff,#000); 
 			margin-top: 10px;
 			border-bottom-left-radius: 15px;
 			border-bottom-right-radius:15px ; 
-			box-shadow: 0px -4px 9px gold 
+			box-shadow: 0px -4px 9px skyblue 
+
 		}
 		.img3 {
 			display: flex;
@@ -177,7 +178,7 @@
     }
     #home:hover{
      	transform:scale(1.0,1.0);
-      color: gold;
+      color: skyblue;
     }
     #instagram:hover{
      	transform: scale(1.2,1.2);
@@ -198,6 +199,7 @@
     	font-size:38px;
     	margin-top: 20px;
     	border-radius: 25px;
+
     }
     .input{
     	height: 80px;
@@ -207,15 +209,25 @@
     	margin-top: 6px;
     	margin-bottom: 6px;
     }
+    .about{
+    	color:white;letter-spacing: 1,5px;font-size: 19px; padding-top: 200px;
+    }
+    .slide{
+    	border-radius: 15px;box-shadow: 0px 0px 15px skyblue; height: 330px;
+    }
 @media screen and (max-width:3000px) 
+
 {
+	.slide{
+    	border-radius: 15px;box-shadow: 0px 0px 15px skyblue; height: 330px;
+    }
 		.mandiv {
 			height: 1100px;
 			width: 100%;
 			background-image: url('p photo/m p1.jpg');
 			background-size: cover;
 			border-radius: 15px;
-			box-shadow: 1px 7px 10px gold;
+			box-shadow: 1px 7px 10px skyblue;
 		}
 
 		.linkdiv {
@@ -224,7 +236,7 @@
 			background-color: #0009;
 			border-top-left-radius: 15px;
 			border-top-right-radius: 15px;
-			box-shadow: 0px 10px 15px gold;
+			box-shadow: 0px 10px 15px skyblue;
 		}
 
 		.link {
@@ -277,11 +289,10 @@
 			float: right;
 			margin-top:360px;
 			padding-right:30px;
-			color: gold;
+			color: skyblue;
 			font-size: 44px;
 		}
-
-		.div1 {
+	.div1 {
 			margin-top: 20px;
 			height: 600px;
 			width: 300px;
@@ -289,7 +300,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 1.jpg');
 
 		}
@@ -302,7 +313,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 2.jpg');
 
 		}
@@ -315,7 +326,7 @@
 			border-radius: 15px;
 			margin-left: 120px;
 			margin-right: 120px;
-			box-shadow: 0px 3px 7px gold;
+			box-shadow: 0px 3px 7px skyblue;
 			background-image: url('p photo/m 3.jpg')
 		}
 
@@ -324,25 +335,25 @@
 			width: 100%;
 			border-radius: 15px;
 			background-color: #717171;
-			box-shadow: 0px 0px 15px gold;
+			box-shadow: 0px 0px 15px skyblue;
 		}
 
 		.headhr {
 			width: 60%;
 			height: 3px;
-			border-color: gold;
+			border-color: skyblue;
 			border-radius: 190px;
 		}
 
 		.brhr {
 			width: 90%;
-			border-color: gold;
+			border-color: skyblue;
 		}
 
 		.smallhr {
 			width: 40%;
 			height: 3px;
-			border-color: gold;
+			border-color: skyblue;
 			border-radius: 190px;
 
 
@@ -353,23 +364,23 @@
 			width: 100%;
 			border-radius: 15px;
 			background-color: #717171;
-			box-shadow: 0px 0px 15px gold;
+			box-shadow: 0px 0px 15px skyblue;
 			margin-top: -18px
 		}
 
 		}
 		.thanks{
 			height: 140px; 
-			background-color: grey; 
+			background:linear-gradient(#fff,#000); grey; 
 			margin-top: 10px;
 			border-bottom-left-radius: 15px;
 			border-bottom-right-radius:15px ; 
-			box-shadow: 0px -4px 9px gold 
+			box-shadow: 0px -4px 9px skyblue 
 		}
     }
     #home:hover{
      	transform:scale(1.0,1.0);
-      color: gold;
+      color: skyblue;
     }
     #instagram:hover{
      	transform: scale(1.2,1.2);
@@ -517,6 +528,7 @@
   }
 }
 @media screen and ( max-width:1130px) {
+	
       .div1{
   	    margin-left: 15px;
   	       margin-right:15px ;
@@ -597,37 +609,82 @@
 
 
 @media screen and (max-width:980px) {
+	body{
+		padding-top: 12px;
+	  padding-left: 12px;
+		padding-right: 12px;
+	}
 	.mandiv{
-		height: 1300px;
+		height: 1600px;
 		background-image: url('p photo/m p8.jpg');
+		border-radius: 30px;
 	}
 	 .raheja {
-			margin-top:620px;
+			margin-top:903px;
 			padding-right:20px;
 			font-size: 35px;
 }
 .img3{
-		display: flex;
+		    display: flex;
         align-content: space-around;
         flex-wrap: wrap;
         flex-direction: column;
         align-items: stretch;
 }
+.div1{
+	width: 600px;
+	height: 1000px;
+	background-image: url('p photo/m p 1.jpg');
+}
+.iam{
+	padding-top: 420px;
+	font-size: 30px;
+	color: skyblue;
+}
+.who{
+	padding-top:140px ;
+	font-size: 40px;
+	color: skyblue;
+}
+.iam2{
+	padding-top: 420px;
+	font-size: 30px;
+	color: skyblue;
+}
+.who2{
+	padding-top:140px ;
+	font-size: 40px;
+	color: skyblue;
+}
+.div2{
+	width: 600px;
+	height: 1000px;
+	background-image: url('p photo/m p 2.jpg');
+}
+.div3{
+	width: 600px;
+	height: 1000px;
+	background-image: url('p photo/m p 3.jpg');
+}
 .linkdiv{
-	height: 110px;
+	height: 130px;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
 }
 .contectdiv{
-	height: 550PX;
+	height: 600PX;
 }
 .thanks{
 	margin-top: 30px;
 	height: 130px;
+	border-radius: 15px;
+	box-shadow: 1px 1px 18px skyblue;
 }
 .iconimg2{
 	height: 50px;
 }
 .addressdiv{
-	height: 700px;
+	height: 750px;
 }
 .hii{
 	font-size: 80px;
@@ -639,10 +696,12 @@
 	height: 60px;
 }
 .nitishjaiswal{
-	font-size: 43px;
+	font-size: 47px;
+	color: skyblue;
 }
 .link{
-	font-size: 30px;
+	font-size: 35px;
+	margin-top:-53px;
 }
 .bigfont{
 	font-size: 40px;
@@ -655,11 +714,19 @@
 }
 .input{
 	width: 60%;
-	height: 50px;
+	height: 60px;
 }
 .submit{
 	width: 20%;
-	height: 40px;
+	height: 50px;
+}
+.about{
+	font-size: 35px;
+	margin-top: 200px;
+	color: skyblue;
+}
+.slide{
+	border-radius: 15px;box-shadow: 0px 0px 15px skyblue; height: 303px;
 }
 }
 
@@ -668,7 +735,7 @@
 	</style>
 </head>
 
-<body style="background-color: #4c4848; border-radius: 15px; margin-top: 10px; margin-left: 10px; margin-right: 10px;">
+<body style="background: linear-gradient(to left,#bfedff 20%, #000); border-radius: 15px; margin-top: 10px; margin-left: 10px; margin-right: 10px;">
 	<div class="mandiv" id="home">
 		<div class="linkdiv">
 			<div class="newlink">
@@ -688,31 +755,31 @@
 		<p class="hii">
 		<h2 style="color: white; " class="hii">
 			hii<br>
-			I AM<bigbigfont{ style="color: gold;">,</bigbigfont{><br>
+			I AM<bigbigfont{ style="color: skyblue;">,</bigbigfont{><br>
 			NITISH JAISWAL<br>
-			<bigbigfont{ style="color: gold;" class="web">WEBDEVLOPER</bigbigfont{>
+			<bigbigfont{ style="color: skyblue;" class="web">WEBDEVLOPER</bigbigfont{>
 		</h2>
 		</p>
 
 		<div>
 			<a href="https:www.instagram.com/nitishjaiswal02" target="_blank" style="color: transparent;">
-				<img id="instagram" src="p photo\instagram.jpg" class="iconimg" id="instagram" style="box-shadow: 0px 0px 10px gold;">
+				<img id="instagram" src="p photo\instagram.jpg" class="iconimg" id="instagram" style="box-shadow: 0px 0px 10px skyblue;">
 			</a>
 
 			<a href="https://web.whatsapp.com/9867657546" target="_blank" style="color: transparent;">
 				<img src="p photo\whatsapp.jpg " class="iconimg" id="instagram"
-					style="margin-left: 10px;box-shadow: 0px 0px 10px gold;">
+					style="margin-left: 10px;box-shadow: 0px 0px 10px skyblue;">
 			</a>
 
 			<a href="https://twitter.com/nitishj87137878" target="_blank" style="color: transparent;">
 				<img src="p photo\twitter.jpg" class="iconimg" id="instagram"
-					style="margin-left: 10px;margin-left: px;box-shadow: 0px 0px 10px gold;">
+					style="margin-left: 10px;margin-left: px;box-shadow: 0px 0px 10px skyblue;">
 			</a>
 
 			<a href="https://www.facebook.com/profile.php?id=100013471294419" target="_blank"
 				style="color: transparent;">
 				<img src="p photo\facebook.jpg" class="iconimg" id="instagram"
-					style="margin-left: 10px;box-shadow: 0px 0px 10px gold;">
+					style="margin-left: 10px;box-shadow: 0px 0px 10px skyblue;">
 			</a>
 			<b>
 				<a href="https://www.lsraheja	a.org/" target="_blank">
@@ -737,7 +804,7 @@
 		</center>
 	</h1>
 
-	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px gold;">
+	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px skyblue;">
 	<div class="img3">
 
 		<div class="div1" class="iconimg">
@@ -747,7 +814,7 @@
 				</div>
 				<div>
 					<b>
-						<p style="color: white; letter-spacing: 1.5px;font-size: 19px; padding-top: 200px;">I am
+						<p class="about">m
 							<b>Nitish jaiswal.</b><br><br>Studing
 							<br><b>Bachelor Of Science In Infometion Technoogy / L.S. Raheja college of Arts & Commerce,
 								Santacrz (E) Mumbai 400055</b>
@@ -771,7 +838,7 @@
 				</div>
 				<div>
 					<b>
-						<p style="color:white;letter-spacing: 1,5px;font-size: 19px; padding-top: 200px; "> I create a
+						<p class="about"> I create a
 							dynamic websites for numerous purposes.<br><br>I use HTML and CSS frameworks, and many other
 							new technologies used in creating attractive and dynamic websites</p>
 					</b>
@@ -783,29 +850,29 @@
 	</div>
 </div>
 
-	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px gold;">
+	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px skyblue;">
 	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner"style="border-radius: 15px;box-shadow: 0px 0px 15px gold; height: 400px;" >
+  <div class="carousel-inner" class="slide" >
     <div class="carousel-item active">
-      <img src="C:\Users\nitish\Desktop\zero2\nitishzero2\p photo\s 1.png" class="d-block w-100" alt="...">
+      <img style="border-radius: 15px;" src="p photo\s 1.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h3>It's nitish jaiaswal </h3>
+        <h1>It's nitish jaiaswal </h1>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="p photo\s 2.jpg" class="d-block w-100" alt="...">
+      <img style="border-radius: 15px;" src="p photo\s 2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h3>my name is</h3>
 
         </div>
     </div>
     <div class="carousel-item">
-      <img src="p photo\s 3.jpg" class="d-block w-100" alt="...">
+      <img style="border-radius: 15px;" src="p photo\s 3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>nitish jaiswal</h5>
       </div>
@@ -820,7 +887,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-	<hr id="phone" style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px gold;">
+	<hr id="phone" style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px skyblue;">
 	<bigfont style="color:#daf4ff;">
 
 	<div class="addressdiv">
@@ -831,7 +898,7 @@
 			<h1 class="hedfont">CONTACT</h1>
 		</center>
 		<p>
-			<hr style=" height: 8PX; color: gold; box-shadow: 0px 0px 22px red;">
+			<hr style=" height: 8PX; color: skyblue; box-shadow: 0px 0px 22px red;">
 			<br> 
 			<center>
 				<b>
@@ -854,26 +921,26 @@
 		<hr class="smallhr">
 		<a href="https:www.instagram.com/nitishjaiswal02" target="_blank" style="color: transparent;">
 			<img src="p photo\instagram.jpg" class="iconimg2" class="social" id="instagram"
-				style="box-shadow: 0px 0px 10px gold;" id="instagram">
+				style="box-shadow: 0px 0px 10px skyblue;" id="instagram">
 		</a>
 
 		<a href="https://web.whatsapp.com/9867657546" target="_blank" style="color: transparent;">
 			<img src="p photo\whatsapp.jpg" class="iconimg2" id="instagram"
-				style="margin-left: 15px;box-shadow: 0px 0px 10px gold;">
+				style="margin-left: 15px;box-shadow: 0px 0px 10px skyblue;">
 		</a>
 
 		<a href="https://twitter.com/nitishj87137878" target="_blank" style="color: transparent;">
 			<img src="p photo\twitter.jpg" class="iconimg2" id="instagram"
-				style="margin-left: 10px;margin-left: 15px;box-shadow: 0px 0px 10px gold;">
+				style="margin-left: 10px;margin-left: 15px;box-shadow: 0px 0px 10px skyblue;">
 		</a>
 
 		<a href="https://www.facebook.com/profile.php?id=100013471294419" target="_blank" style="color: transparent;">
 			<img src="p photo\facebook.jpg" class="iconimg2" id="instagram"
-				style="margin-left: 10px;box-shadow: 0px 0px 10px gold;margin-right:  69px;">
+				style="margin-left: 10px;box-shadow: 0px 0px 10px skyblue;margin-right:  69px;">
 		</a>
 		<br><br>
 	</div>
-	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px gold;">
+	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px skyblue;">
 	<br>
 	<div class="contectdiv">
 		<br>
@@ -882,36 +949,36 @@
 				<h1 class="hedfont"> CONTACT US</h1>
 			</big>
 			</h1>
-			<hr style=" height: 8PX; color: gold; box-shadow: 0px 0px 22px red;">
+			<hr style=" height: 8PX; color: skyblue; box-shadow: 0px 0px 22px red;">
 			
 			<br>
 			<br>
 			<FORM>
 				<input class="input" type="box" name="" placeholder="   Name*" title="  fill your name*"
-					style="background-color:#4c4848; box-shadow: 0px 0px 5px gold; border-color: transparent;"
+					style="background-color:#4c4848; box-shadow: 0px 0px 5px skyblue; border-color: transparent;"
 					required="">
 				<br>
 				<input class="input" type="email" name="" placeholder="   Your Email Address*"
 					title="fill your email address"
-					style="background-color:#4c4848;border-color: transparent; box-shadow: 0px 0px 5px gold;"
+					style="background-color:#4c4848;border-color: transparent; box-shadow: 0px 0px 5px skyblue;"
 					required="Email">
 					<br>
 				<textarea class="input" required="" placeholder="  Your Message*" title="please fill your message"
-					style="background-color: #4c4848; box-shadow: 0px 0px 5px gold;"></textarea>
+					style="background-color: #4c4848; box-shadow: 0px 0px 5px skyblue;"></textarea>
 					<br>
 				<input class="input" type="box" name="" placeholder="   Your Feedback" title="feedback"
-					style="background-color:#4c4848; box-shadow: 0px 0px 5px gold; border-color: transparent;">
+					style="background-color:#4c4848; box-shadow: 0px 0px 5px skyblue; border-color: transparent;">
 				<br>
 
 				<button class="submit" title="submit"
-					style="background-color: gold; border-color: ;">SUBMIT</button>
+					style="background-color: skyblue; border-color:;">SUBMIT</button>
 		</CENTER>
 		</FORM>
 		<br><br><br>
 		<div class="thanks">
-			<h2 style="padding-top: 10px;padding-bottom: 10px; padding-left: 20px; color: gold" class="bigfont"> Nitish Jaiswal.<br> All
+			<h2 style="padding-top: 10px;padding-bottom: 10px; padding-left: 20px; color: skyblue" class="bigfont"> Nitish Jaiswal.<br> All
 				rights reserved.</h2>
-			<h3 style="float: right;margin-top: -40px; padding-right: 20px; color: gold;" class="font">Thank You.
+			<h3 style="float: right;margin-top: -40px; padding-right: 20px; color: skyblue;" class="font">Thank You.
 			</h3>
 
 
@@ -920,7 +987,7 @@
 	</div>
 
 	</div>
-	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px gold;">
+	<hr style=" align-items: center; height: 10px; background-color: red; border-radius: 50%; box-shadow: 0px 0px 16px skyblue;">
 
 
 </body>
