--- a/index.html
+++ b/index.html
@@ -740,7 +740,6 @@
 		<div class="linkdiv">
 			<div class="newlink">
 				<div>
-					<a href="https:www.instagram.com/nitishjaiswal02" target="_blank" style="color: transparent;">
 					<h1 class="nitishjaiswal">NITISH JAISWAL</h1>
 				</a>
 				</div>
@@ -762,7 +761,7 @@
 		</p>
 
 		<div>
-			<a href="https:www.instagram.com/nitishjaiswal02" target="_blank" style="color: transparent;">
+			<a href="https:www.instagram.com/nitis.5" target="_blank" style="color: transparent;">
 				<img id="instagram" src="p photo\instagram.jpg" class="iconimg" id="instagram" style="box-shadow: 0px 0px 10px skyblue;">
 			</a>
 
@@ -919,7 +918,7 @@
 				<h3 class="font">jaiswalnitish32@gmail.com</h3>
 		</p>
 		<hr class="smallhr">
-		<a href="https:www.instagram.com/nitishjaiswal02" target="_blank" style="color: transparent;">
+		<a href="https:www.instagram.com/nitis.5" target="_blank" style="color: transparent;">
 			<img src="p photo\instagram.jpg" class="iconimg2" class="social" id="instagram"
 				style="box-shadow: 0px 0px 10px skyblue;" id="instagram">
 		</a>
